; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/carl9170/extr_main.c_carl9170_op_sta_add.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/carl9170/extr_main.c_carl9170_op_sta_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_hw = type { i32 }
%struct.ieee80211_vif = type { i32 }
%struct.ieee80211_sta = type { %struct.TYPE_2__, i64 }
%struct.TYPE_2__ = type { i32, i32, i64 }
%struct.carl9170_sta_info = type { i32, i32, i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ieee80211_hw*, %struct.ieee80211_vif*, %struct.ieee80211_sta*)* @carl9170_op_sta_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @carl9170_op_sta_add(%struct.ieee80211_hw* %0, %struct.ieee80211_vif* %1, %struct.ieee80211_sta* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.ieee80211_hw*, align 8
  %6 = alloca %struct.ieee80211_vif*, align 8
  %7 = alloca %struct.ieee80211_sta*, align 8
  %8 = alloca %struct.carl9170_sta_info*, align 8
  %9 = alloca i32, align 4
  store %struct.ieee80211_hw* %0, %struct.ieee80211_hw** %5, align 8
  store %struct.ieee80211_vif* %1, %struct.ieee80211_vif** %6, align 8
  store %struct.ieee80211_sta* %2, %struct.ieee80211_sta** %7, align 8
  %10 = load %struct.ieee80211_sta*, %struct.ieee80211_sta** %7, align 8
  %11 = getelementptr inbounds %struct.ieee80211_sta, %struct.ieee80211_sta* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to i8*
  %14 = bitcast i8* %13 to %struct.carl9170_sta_info*
  store %struct.carl9170_sta_info* %14, %struct.carl9170_sta_info** %8, align 8
  %15 = load %struct.carl9170_sta_info*, %struct.carl9170_sta_info** %8, align 8
  %16 = getelementptr inbounds %struct.carl9170_sta_info, %struct.carl9170_sta_info* %15, i32 0, i32 3
  %17 = call i32 @atomic_set(i32* %16, i32 0)
  %18 = load %struct.ieee80211_sta*, %struct.ieee80211_sta** %7, align 8
  %19 = getelementptr inbounds %struct.ieee80211_sta, %struct.ieee80211_sta* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 2
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %61

23:                                               ; preds = %3
  %24 = load %struct.ieee80211_sta*, %struct.ieee80211_sta** %7, align 8
  %25 = getelementptr inbounds %struct.ieee80211_sta, %struct.ieee80211_sta* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = icmp sgt i32 %27, 6
  br i1 %28, label %29, label %30

29:                                               ; preds = %23
  store i32 0, i32* %4, align 4
  br label %62

30:                                               ; preds = %23
  store i32 0, i32* %9, align 4
  br label %31

31:                                               ; preds = %47, %30
  %32 = load i32, i32* %9, align 4
  %33 = load %struct.carl9170_sta_info*, %struct.carl9170_sta_info** %8, align 8
  %34 = getelementptr inbounds %struct.carl9170_sta_info, %struct.carl9170_sta_info* %33, i32 0, i32 2
  %35 = load i32*, i32** %34, align 8
  %36 = call i32 @ARRAY_SIZE(i32* %35)
  %37 = icmp ult i32 %32, %36
  br i1 %37, label %38, label %50

38:                                               ; preds = %31
  %39 = load %struct.carl9170_sta_info*, %struct.carl9170_sta_info** %8, align 8
  %40 = getelementptr inbounds %struct.carl9170_sta_info, %struct.carl9170_sta_info* %39, i32 0, i32 2
  %41 = load i32*, i32** %40, align 8
  %42 = load i32, i32* %9, align 4
  %43 = zext i32 %42 to i64
  %44 = getelementptr inbounds i32, i32* %41, i64 %43
  %45 = load i32, i32* %44, align 4
  %46 = call i32 @RCU_INIT_POINTER(i32 %45, i32* null)
  br label %47

47:                                               ; preds = %38
  %48 = load i32, i32* %9, align 4
  %49 = add i32 %48, 1
  store i32 %49, i32* %9, align 4
  br label %31

50:                                               ; preds = %31
  %51 = load %struct.ieee80211_sta*, %struct.ieee80211_sta** %7, align 8
  %52 = getelementptr inbounds %struct.ieee80211_sta, %struct.ieee80211_sta* %51, i32 0, i32 0
  %53 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %52, i32 0, i32 1
  %54 = load i32, i32* %53, align 4
  %55 = add nsw i32 3, %54
  %56 = shl i32 1, %55
  %57 = load %struct.carl9170_sta_info*, %struct.carl9170_sta_info** %8, align 8
  %58 = getelementptr inbounds %struct.carl9170_sta_info, %struct.carl9170_sta_info* %57, i32 0, i32 0
  store i32 %56, i32* %58, align 8
  %59 = load %struct.carl9170_sta_info*, %struct.carl9170_sta_info** %8, align 8
  %60 = getelementptr inbounds %struct.carl9170_sta_info, %struct.carl9170_sta_info* %59, i32 0, i32 1
  store i32 1, i32* %60, align 4
  br label %61

61:                                               ; preds = %50, %3
  store i32 0, i32* %4, align 4
  br label %62

62:                                               ; preds = %61, %29
  %63 = load i32, i32* %4, align 4
  ret i32 %63
}

declare dso_local i32 @atomic_set(i32*, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32*) #1

declare dso_local i32 @RCU_INIT_POINTER(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
